--- a/red-snow/index.html
+++ b/red-snow/index.html
@@ -234,7 +234,7 @@
                     let dateArr = Array.from(dateSet);                                                
                     for (let s = 0; s < dateArr.length; s++) {
                         if (dateArr[s] !== today) {    
-                            tpl = '<div class="btn btn-success" id="todayDataDownload" onclick="downloadDateClickEvent(' + dateArr[s].replaceAll('/', '') + ')">' + dateArr[s] + '</div>';
+                            tpl = '<div class="btn btn-success mx-1" id="todayDataDownload" onclick="downloadDateClickEvent(' + dateArr[s].replaceAll('/', '') + ')">' + dateArr[s] + '</div>';
                             $('#btnGrp').append($(tpl));
                         }
                     }                        
@@ -288,7 +288,7 @@
                 return;
             }
             const universalBOM = "\uFEFF";
-            let tpl = '<div class="btn btn-info" onclick="removeDownloadThisOrderBtn()" id="downloadThisOrderBtn"><a class="text-light" download="' + $('#orderIdH5').html() + '.csv" href="data:application/csv;charset=utf-8,' + universalBOM + '{table_header}%0A{table_content}"><div id="downloadOrder" onclick="updateThisStatus()">' + nowStr + '掃描紀錄' + '</div></a></div>';  // v1.0.2 改中文編碼
+            let tpl = '<div class="btn btn-info mx-1" onclick="removeDownloadThisOrderBtn()" id="downloadThisOrderBtn"><a class="text-light" download="' + $('#orderIdH5').html() + '.csv" href="data:application/csv;charset=utf-8,' + universalBOM + '{table_header}%0A{table_content}"><div id="downloadOrder" onclick="updateThisStatus()">' + nowStr + '掃描紀錄' + '</div></a></div>';  // v1.0.2 改中文編碼
             let table_content = '';
             $('#todayDataDownload').attr("hidden", false);    
             $.each($("td"), function (index, cell) {                
@@ -585,7 +585,7 @@
                             }                    
                         }
                     }                    
-                    if (count === 0) {
+                    if (count === 0) {                        
                         $('#todayDataDownload').attr("hidden", true);
                     }
                     
